@@ -1,7 +1,5 @@
 package org.example;
 
-import org.apache.commons.lang3.StringUtils;
-
 import javax.servlet.ServletException;
 import javax.servlet.ServletOutputStream;
 import javax.servlet.ServletRequest;
@@ -12,16 +10,12 @@ import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.time.LocalTime;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Optional;
-import java.util.concurrent.ConcurrentHashMap;
+import java.util.*;
 
 @WebServlet("/garage")
 public class CarServlet extends HttpServlet {
-    private Garage garage = Garage.getInstance();
 
+    private CarService carService = new CarServiceImpl();
 
     @Override
     protected void service(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
@@ -33,19 +27,16 @@ public class CarServlet extends HttpServlet {
     @Override
     public void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
 
-        String id = req.getParameter("id");
 
-        if (StringUtils.isBlank(id)) {
-            req.setAttribute("garage", garage.getCars());
+        if (req.getParameter("id") == null || req.getParameter("id").isBlank()) {
+            List<Car> cars = carService.getAll();
+            req.setAttribute("cars", cars);
             req.getRequestDispatcher("/garage.jsp").forward(req, resp);
 
         } else {
-            int idInt = Integer.valueOf(id);
-            Optional<Car> car = garage.getCar(idInt);
-            Car resultCar = car.orElseThrow();
-            Map<Integer, Car> cars = new ConcurrentHashMap<>();
-            cars.put(resultCar.getId(), resultCar);
-            req.setAttribute("garage", cars);
+            int id = Integer.valueOf(req.getParameter("id"));
+            List<Car> cars = carService.getById(id);
+            req.setAttribute("cars", cars);
             req.getRequestDispatcher("/garage.jsp").forward(req, resp);
 
 
@@ -61,7 +52,7 @@ public class CarServlet extends HttpServlet {
         String color = req.getParameter("color");
         if (!(StringUtils.isAnyBlank(id, name, color))) {
             resp.setStatus(201);
-            garage.addCar(new Car(Integer.valueOf(id), name, color));
+            carService.saveCar(new Car(Integer.valueOf(id), name, color));
         } else {
             resp.setStatus(400);
         }
@@ -86,10 +77,12 @@ public class CarServlet extends HttpServlet {
         String id = req.getParameter("id");
         String name = req.getParameter("name");
         String color = req.getParameter("color");
-
+        boolean isIdNull = (id == null);
+        boolean isNameNull = (name == null);
+        boolean isColorNull = (color == null);
         boolean containsKey = garage.getCars().containsKey(Integer.valueOf(id));
 
-        if (containsKey && !(StringUtils.isAnyBlank(id, name, color))) {
+        if ((!isIdNull) && (!isNameNull) && containsKey && (!isColorNull)) {
             garage.getCars().replace(Integer.valueOf(id), new Car(Integer.valueOf(id), name, color));
         } else {
             resp.setStatus(400);
